--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
+    "formik": "^1.5.7",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
@@ -134,19 +135,20 @@
     "file-loader": "3.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "husky": "^3.0.0",
     "image-webpack-loader": "4.6.0",
     "imports-loader": "0.8.0",
     "jest-cli": "24.7.1",
     "jest-dom": "3.1.3",
     "jest-styled-components": "6.3.1",
-    "lint-staged": "8.1.5",
+    "lint-staged": "^8.1.5",
     "ngrok": "3.1.1",
     "node-plop": "0.18.0",
     "null-loader": "0.1.1",
     "offline-plugin": "5.0.6",
     "plop": "2.3.0",
     "pre-commit": "1.2.2",
-    "prettier": "1.17.0",
+    "prettier": "^1.17.0",
     "react-app-polyfill": "0.2.2",
     "react-test-renderer": "16.8.6",
     "react-testing-library": "6.1.2",
